[tool.poetry]
name = "loguru"
version = "0.1.0"
description = ""
authors = ["my <jakha921@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
loguru = "tmp.greeting:say_hello"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
